# 3DV_Assignment1

./: .gitignore  CMakeLists.txt  vcpkg.json
cmake/: CompilerWarnings.cmake
integrity_tests/: CMakeLists.txt
integrity_tests/src/: test_classes.h  tests.cpp
report/: report.md
shaders/: surface_cube.fs  surface_cube.vs  viewer_output.fs  viewer_output.vs  wireframe_cube.fs
src/: CMakeLists.txt  main.cpp
src/render/: ray.h  ray_trace_camera.h  render_config.h  renderer.cpp  renderer.h
src/ui/: full_screen_texture_gl.cpp  full_screen_texture_gl.h  gl_error.h  menu.cpp  menu.h  opengl.cpp  opengl.h  rasterization_camera.h  surface_cube.cpp  surface_cube.h  trackball.cpp  trackball.h  transfer_func.cpp  transfer_func.h  window.cpp  window.h  wireframe_cube.cpp  wireframe_cube.h
src/volume/: gradient_volume.cpp  gradient_volume.h  volume.cpp  volume.h
